# legacy-sipXcallQueue

./: .gitignore  .project  Makefile.am  configure.ac  sipxcallqueue.spec.in
config-plugin/: Makefile.am
config-plugin/plugin/: CallQueueAgentsPanel.html  CallQueueAgentsPanel.properties  CallQueueEditAgent.html  CallQueueEditAgent.page  CallQueueEditAgent.properties  CallQueueEditQueue.html  CallQueueEditQueue.page  CallQueueEditQueue.properties  CallQueueEditSettingsPanel.html  CallQueueHook.html  CallQueueHook.page  CallQueueHook.properties  CallQueuePage.html  CallQueuePage.properties  CallQueueQueuesPanel.html  CallQueueQueuesPanel.properties  CallQueueSelectPage.page
config-plugin/src/: sipxcallqueue.properties  sipxplugin.beans.xml
config-plugin/src/org/sipfoundry/sipxconfig/callqueue/: CallCenterConfiguration.java  CallQueue.java  CallQueueAgent.java  CallQueueCommand.java  CallQueueContext.java  CallQueueContextImpl.java  CallQueueDeployer.java  CallQueueExtension.java  callqueue.hbm.xml
config-plugin/src/org/sipfoundry/sipxconfig/web/plugin/: CallQueueAgentSelectUser.java  CallQueueAgentsPanel.java  CallQueueEditAgent.java  CallQueueEditQueue.java  CallQueueEditSettingsPanel.java  CallQueueHook.java  CallQueuePage.java  CallQueueQueuesPanel.java  CallQueueSelectPage.java
config-plugin/test/: Makefile.am
config-plugin/test/org/sipfoundry/sipxconfig/callqueue/: CallQueueContextImplTestIntegration.java
etc/: 00_sipxcallqueue.cf  Makefile.am
etc/freeswitch/: callcenter.conf.xml.vm
etc/sipxcallqueue/: CallQueue.properties  CallQueue.xml  CallQueueAgent.properties  CallQueueAgent.xml  CallQueueSettings.properties  CallQueueSettings.xml
